--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,12 @@ body {
 a {
   color: #00B7FF;
 }
+h1 {
+  text-align: center;
+}
+
+.image img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
