--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,4 +14,17 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 540px;
+  height: auto;
+}
+
+.jumbotron p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.jumbotron pre {
+  text-align: center;
+  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
