--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,16 @@ h1 {
   text-align: center;
 }
 
+b {
+  font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
 .image img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 540px;
-  height: auto;
+  width: auto;
+  height: 500px;
 }
 
 .jumbotron p {
@@ -26,5 +30,9 @@ h1 {
 
 .jumbotron pre {
   text-align: center;
-  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 15px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+.container {
+  padding: 10px;
 }
