--- a/views/moroneyDFA.html
+++ b/views/moroneyDFA.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 <h1>Chris Moroney's CSC 4210 DFA Extra Credit</h1>
-
+<h3>Winter 2021</h3>
 <div class="image">
     <img src="../images/CSC_4210_DFA.jpg">
 </div>
