another small fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,10 @@ h1 {
   text-align: center;
 }
 
+h3 {
+  text-align: center;
+}
+
 b {
   font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
