added formal description

--- a/views/moroneyDFA.html
+++ b/views/moroneyDFA.html
@@ -57,6 +57,9 @@
 <body>
 <h1>Chris Moroney's CSC 4210 DFA Extra Credit</h1>
 <h3>Winter 2021</h3>
+<p style="text-align: center">M = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q0, (q1, 1) --> q0 },
+    q0 = q0, F = {q1}</p>
+<p style="text-align: center">L(M) = {w | the length of w is odd}</p>
 <div class="image">
     <img src="../images/CSC_4210_DFA.jpg">
 </div>
