--- a/views/moroneyDFAM2.html
+++ b/views/moroneyDFAM2.html
@@ -10,10 +10,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>
         function checkNumber(){
-            var stateCheck = false;
+            var stateCheck = true;
             var canContinue = true;
             var input = String(document.getElementById("insert").value);
-            output.innerHTML = "<p>Result: Reject</p>";
+            output.innerHTML = "<p>Result: Accept</p>";
             for(var i = 0; i < input.length; i++){
                 if(input.charAt(i) != '0' && input.charAt(i) != '1'){
                     output.innerHTML = "<pre>Please enter an input string of only 0s and 1s.</pre>";
@@ -21,7 +21,7 @@
                     break;
                 } else {
                     if(input.length % 2 == 1){
-                        output.innerHTML = "<p>Result: Accept</p>";
+                        output.innerHTML = "<p>Result: Reject</p>";
                         canContinue = true;
                     }
                 }
@@ -31,23 +31,23 @@
                 output.innerHTML += "<pre>" + "Inputted String: " + "<b>" + input + "</b>" + "</pre>";
                 output.innerHTML += "<pre>Start State: q0</pre>";
                 for(var k = 0; k < input.length; k++){
-                    if(stateCheck == false){
-                        stateCheck = true;
+                    if(stateCheck == true){
+                        stateCheck = false;
                         let outting = "(q0, " + input.charAt(k) + ") --> " + "<b>" + "q1" + "</b>";
                         output.innerHTML += "<pre>" + outting + "</pre>";
                     } else {
-                        stateCheck = false;
+                        stateCheck = true;
                         let outting = "(q1, " + input.charAt(k) + ") --> " + "<b>" + "q0" + "</b>";
                         output.innerHTML += "<pre>" + outting + "</pre>";
                     }
                 }
                 if(stateCheck){
                     let conclusion = "After consuming the whole string, the DFA ends in the accepting state, "
-                        + "<b>" + "q1" + "</b>" + ". Thus, the inputted string is " + "<b>" + "accepted." + "</b>";
+                        + "<b>" + "q0" + "</b>" + ". Thus, the inputted string is " + "<b>" + "accepted." + "</b>";
                     output.innerHTML += "<pre>" + conclusion + "</pre>";
                 } else {
                     let conclusion = "After consuming the whole string, the DFA does not end in the accepting state, but rather in "
-                        + "<b>" + "q0" + "</b>" + ". Thus, the inputted string is " + "<b>" + "rejected." + "</b>";
+                        + "<b>" + "q1" + "</b>" + ". Thus, the inputted string is " + "<b>" + "rejected." + "</b>";
                     output.innerHTML += "<pre>" + conclusion + "</pre>";
                 }
             }
@@ -55,13 +55,26 @@
     </script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="moroneyDFAM1">Machine 1</a>
+            <a class="nav-item nav-link active" href="moroneyDFAM2">Machine 2</a>
+            <a class="nav-item nav-link" href="moroneyDFAM3">Machine 3</a>
+        </div>
+    </div>
+</nav>
 <h1>Chris Moroney's CSC 4210 DFA Extra Credit</h1>
 <h3>Winter 2021</h3>
-<p style="text-align: center">M = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q0, (q1, 1) --> q0 },
-    q0 = q0, F = {q1}</p>
-<p style="text-align: center">L(M) = {w | the length of w is odd}</p>
+<p style="text-align: center">M2 = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q0, (q1, 1) --> q0 },
+    q0 = q0, F = {q0}</p>
+<p style="text-align: center">L(M2) = {w | the length of w is even}</p>
 <div class="image">
-    <img src="../images/CSC_4210_DFA.jpg">
+    <img src="../images/CSC_4210_DFA_evens.jpg">
 </div>
 
 <div class="container">
