--- a/views/moroneyDFAM3.html
+++ b/views/moroneyDFAM3.html
@@ -63,13 +63,14 @@
     </script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/">Home</a>
             <a class="nav-item nav-link" href="moroneyDFAM1">Machine 1</a>
             <a class="nav-item nav-link" href="moroneyDFAM2">Machine 2</a>
             <a class="nav-item nav-link active" href="moroneyDFAM3">Machine 3</a>
