--- a/views/moroneyDFAM2.html
+++ b/views/moroneyDFAM2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Moroney DFA 4210</title>
+    <title>Machine 2</title>
     <link rel="stylesheet" href="../stylesheets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -66,6 +66,7 @@
             <a class="nav-item nav-link" href="moroneyDFAM1">Machine 1</a>
             <a class="nav-item nav-link active" href="moroneyDFAM2">Machine 2</a>
             <a class="nav-item nav-link" href="moroneyDFAM3">Machine 3</a>
+            <a class="nav-item nav-link" href="custom">Create your own DFA</a>
         </div>
     </div>
 </nav>
