--- a/views/moroneyDFAM1.html
+++ b/views/moroneyDFAM1.html
@@ -75,6 +75,9 @@
 <p style="text-align: center">M1 = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q0, (q1, 1) --> q0 },
     q0 = q0, F = {q1}</p>
 <p style="text-align: center">L(M1) = {w | the length of w is odd}</p>
+<p style="text-align: center">**2 states, 2 chars in alphabet, Start State: 0, Accept States: q1, Transitions: (q0,0,q1)|
+    (q0,1,q1)|(q1,0,q0)|(q1,1,q0)**</p>
+<p style="text-align: center">**For modifying DFA in Create your own DFA</p>
 <div class="image">
     <img src="../images/CSC_4210_DFA_odds.jpg">
 </div>
