--- a/views/moroneyDFAM3.html
+++ b/views/moroneyDFAM3.html
@@ -83,6 +83,9 @@
 <p style="text-align: center">M3 = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q2, (q1, 1) --> q2,
     (q2, 0) --> q0, (q1, 2) --> q0 }, q0 = q0, F = {q0}</p>
 <p style="text-align: center">L(M3) = {w | the length of w is a multiple of 3}</p>
+<p style="text-align: center">**3 states, 2 chars in alphabet, Start State: 0, Accept States: q0, Transitions: (q0,0,q1)|
+    (q0,1,q1)|(q1,0,q2)|(q1,1,q2)|(q2,0,q0)|(q2,1,q0)**</p>
+<p style="text-align: center">**For modifying DFA in Create your own DFA</p>
 <div class="image">
     <img src="../images/CSC_4210_DFA_mult_3.jpg">
 </div>
